[package]
name = "teleinfo_reader"
version = "0.1.0"
authors = ["Jonathan Virga <jonathan.virga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
regex = "1.3.9"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
clap = "2.33.1"
log = "0.4"
dotenv = "0.15.0"
rand = "0.7.3"
diesel = { version = "1.4.5", features = ["postgres"] }