[package]
name = "teleinfo_reader"
version = "0.1.0"
authors = ["Jonathan Virga <jonathan.virga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
regex = "1.3.9"
clap = "2.33.1"
log = "0.4"
dotenv = "0.15.0"
rand = "0.7.3"
chrono = "0.4.13"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }