[package]
name = "teleinfo_reader"
version = "0.3.1"
authors = ["Jonathan Virga <jonathan.virga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "Read serial data from teleinformation flux"
section = "admin"
priority = "optional"
assets = [
    ["target/release/read-teleinfo", "usr/bin/read-teleinfo", "755"],
    ["debian/read-teleinfo.service", "/lib/systemd/system/read-teleinfo.service", "644"],
    ["debian/read-teleinfo.conf", "/etc/read-teleinfo.conf", "644"],
]
maintainer-scripts = "debian/scripts"

[dependencies]
serialport = "3.3.0"
regex = "1.3.9"
clap = "2.33.3"
log = "0.4"
dotenv = "0.15.0"
rand = "0.7.3"
chrono = { version = "0.4.15", features = ["serde"] }
chrono-tz = "0.5.2"
cron = "0.6.1"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
csv = "1.1.3"
serde = { version = "1.0.115", features = ["derive"] }